<resources>
    <string name="app_name">health_helper</string>
    <string name="measure">测量</string>
    <string name="chat">通讯</string>
    <string name="news">资讯</string>
    <string name="community">社区</string>
    <string name="me">我的</string>
    <string name="qq_login">QQ登录</string>
    <string name="weibo_login">微博登录</string>
    <string name="logout">退出登录</string>
    <string name="my_question">我的提问</string>
    <string name="my_answer">我的回答</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_like">我的点赞</string>
    <string name="my_reminder">我的提醒</string>
    <string name="settings">应用设置</string>
    <string name="share">应用分享</string>
    <string name="search">搜索</string>
    <string name="add_question">提问</string>
    <string name="add_question_title">输入你的问题</string>
    <string name="add_question_description">输入问题的描述，可以更快获得解答喔</string>
    <string name="publish">发布</string>
    <string name="question_title_empty">问题不能为空</string>
    <string name="question_description">问题描述: </string>
    <string name="publish_success">发布成功</string>
    <string name="pubish_failed">发布失败</string>
    <string name="full_text">全文</string>
    <string name="show_less">收起</string>
    <string name="comment">评论</string>
    <string name="comment_input">输入你的评论</string>
    <string name="height_input">请输入你的身高</string>
    <string name="weight_input">请输入你的体重</string>
    <string name="birth_input">请选择你的出生日期</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="logout_confirm">确定要退出吗？</string>
    <string name="loading_more">正在加载更多……</string>
    <string name="no_more">没有更多数据了</string>
    <string name="network_error">加载遇到了点问题…</string>
    <string name="reload">重新加载</string>
    <string name="input_answer">输入你的回答</string>
    <string name="answer">回答</string>
    <string name="answer_empty">回答不能为空</string>
    <string name="filter_by_hot">按热度排序</string>
    <string name="filter_by_time">按时间排序</string>
    <string name="load_comment_error">加载评论失败</string>
    <string name="send_comment_success">发布评论成功</string>
    <string name="send_comment_failed">发布评论失败</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="require_permission">为确保应用的正常运行，需要获取一些权限</string>
    <string name="required_permission_denied_title">权限被拒绝</string>
    <string name="required_permission_denied_content">如果不打开权限可能会影响应用的正常运行</string>
    <string name="register_im_fail">腾讯云信注册失败！</string>
    <string name="user_name">用户名</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="age">年龄</string>
    <string name="gender">性别</string>
    <string name="user_info">个人信息修改</string>
    <string name="favorite_success">收藏成功</string>
    <string name="favorite_failed">收藏失败</string>
    <string name="cancel_favorite_success">取消收藏成功</string>
    <string name="cancel_favorite_failed">取消收藏失败</string>
    <string name="year_ago">%d年前</string>
    <string name="month_ago">%d个月前</string>
    <string name="day_ago">%d天前</string>
    <string name="hour_ago">%d小时前</string>
    <string name="minute_ago">%d分钟前</string>
    <string name="just">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="hot_key">热搜</string>
    <string name="search_history">历史搜索</string>
    <string name="like_success">点赞成功</string>
    <string name="like_failed">点赞失败</string>
    <string name="cancel_like_success">取消点赞成功</string>
    <string name="cancel_like_failed">取消点赞失败</string>
    <string name="im_failed">聊天系统出了点问题~~~</string>
    <string name="confirm_delete">确认要删除吗？</string>
    <string name="time">时间</string>
    <string name="choose_time">点击选择时间</string>
    <string name="recycler">重复</string>
    <string name="type">类型</string>
    <string name="remark">内容</string>
    <string name="medicine">服药</string>
    <string name="sports">运动</string>
    <string name="sleep">睡眠</string>
    <string name="wakeup">起床</string>
    <string name="common">常用提醒</string>
    <string name="remark_hint">把注意事项写下来，可以避免遗忘~</string>
    <string name="to_select_time">请选择提醒时间</string>
    <string name="to_select_repeat">请选择提醒周期</string>
    <string name="to_select_type">请选择提醒类型</string>
    <string name="to_add_remark">别忘了添加备忘内容~</string>
    <string name="add">添加</string>
    <string name="qq_share">分享给QQ好友</string>
    <string name="qq_qzone_share">分享到QQ空间</string>
    <string name="share_successful">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="login_attention1">注册登录表示您已阅读并同意</string>
    <string name="login_attention2">健康管家服务协议及隐私政策</string>
    <string name="name">健康管家</string>
    <string name="slogon">爱生活，爱健康</string>
    <string name="weight_name">乐心体脂秤S9</string>
    <string name="pair_ls">匹配</string>
    <string name="open_bluetooth_hint">Please turn on Bluetooth</string>
    <string name="no_device_hint">No devices</string>
    <string name="bmi">BMI</string>
    <string name="bodyAge">身体年龄</string>
    <string name="gutLevel">内脏脂肪等级</string>
    <string name="metabolize">基础代谢</string>
    <string name="oilPercent">脂肪率</string>
    <string name="musclePercent">肌肉率</string>
    <string name="protein">蛋白质</string>
    <string name="waterPercent">水份率</string>
    <string name="oilValue">脂肪量</string>
    <string name="muscleValue">肌肉量</string>
    <string name="boneMuscle">骨骼肌</string>
    <string name="boneValue">骨量</string>
    <string name="oilControl">脂肪控制</string>
    <string name="muscleControl">肌肉控制</string>
    <string name="weightWithoutOil">去脂体重</string>
    <string name="thin">偏瘦</string>
    <string name="perfect">理想</string>
    <string name="fat">偏胖</string>
    <string name="superFat">肥胖</string>
    <string name="young">年轻</string>
    <string name="old">偏大</string>
    <string name="high">偏高</string>
    <string name="superHigh">超高</string>
    <string name="low">偏低</string>
    <string name="superLow">超低</string>
    <string name="standard">标准</string>
    <string name="blank"> </string>
    <string name="years_old">岁</string>
    <string name="cal">大卡</string>
    <string name="percent">%</string>
    <string name="kg">kg</string>
    <string name="stay">保持</string>
    <string name="need_add">需增加</string>
    <string name="need_sub">需减少</string>
    <string name="body_report">身体报告</string>
    <string name="grade">分</string>
    <string name="weight_low">你的体重偏低, 建议每周进行3~4次循序渐进的力量练习, 在训练后保证足量碳水和蛋白质的摄入。\n\n平时可以多吃坚果牛肉干等富含蛋白质的零食, 保证每天多摄入300~600千卡的热量, 直至达到目标体重。</string>
    <string name="weight_standard">你的体重标准, 体重过轻和过重都不利于身体健康。\n\n通过合理运动和营养干预可以使体重保持在理想范围, 从而获得更好看、 更健康的身材。</string>
    <string name="weight_high">你的体重偏高, 体重过重会给心脏和骨骼系统带来额外的负荷, 导致体力下降、 身体磨损、 慢性疾病风险增加等一系列问题.\n\n减重建议: 每周进行4~5次, 每次45~60分钟的中低强度锻炼。 锻炼时可先进行15~20分钟的力量练习, 然后再进行30~45分钟的有氧练习, 这样币以使燃脂效率更高.\n\n饮食上减少500~1000千卡的热量摄入,同时注意合理搭配营养成分。 以杂粮、 谷薯等富含膳食纤维的食物为主食,搭配鱼虾、 鸡蛋、 瘦肉类等低脂高蛋白食物, 同时注意摄入多种蔬菜水果, 组成低热量、 高营养、 强饱腹感的膳食结构。</string>
    <string name="bmi_suggestion">BMI=体重(kg)/身高(m)2\n\n\nBMI又称身体质量指数, 在一定程度上可以反映人的胖瘦情况, 适宜的BMI是保持健康和 好身材的前提。</string>
    <string name="metabolize_low">你的基础代谢偏低, 稍微多吃就容易发胖, 可能会出现减重时的平台期及反弹。\n\n基础代谢指的是人在不进行脑力与体力活动时所消耗的热量。\n\n改善基础代谢的方法包括早睡早起、 吃好早餐、 多喝水、进行力量练习。 增加身体的肌肉含量, 是提升基础代谢率的秘密武器。</string>
    <string name="metabolize_perfect">你的基础代谢理想, 只要不多吃就可以轻松保持体重啦。\n\n基础代谢指的是人不进行脑力与体力活动时消耗的热量。\n\n提升基础代谢的方法包括调整作息早睡早起、 吃好早餐、多喝水, 进行力量训练增加身体的肌肉含量是提升基础代谢率的秘密武器。</string>
    <string name="fat_ratio_low">你的脂肪率偏低, 肌肉线条较明显。\n\n脂肪率即脂肪重量占体重的百分比, 男性脂肪率达到\n\n12~14%女性脂肪率达到20~22%, 就能看到较明显的肌肉线条。\n\n脂肪率过低可能会引起内分泌失调, 建议男性脂肪率不能低于3%, 女性不能低于14%。</string>
    <string name="fat_ratio_perfect">脂肪率即脂肪重量占体重的百分比,男性脂肪率达到12~14%, 女性脂肪率达到20~22%, 就能看到较明显的肌肉线条。\n\n健走、 慢跑、 骑行、 游泳等长时间中低强度的运动, 可以有效燃烧 脂肪降低脂肪率。 同时配合力量练习, 增强肌肉, 就可以拥有更明显的肌肉线条。</string>
    <string name="fat_ratio_high">你的脂肪率偏高, 可能会导致肥胖以及增加肥胖类疾病的患病风险.\n\n长时间的中低强度运动具有良好减脂效果, 搭配循序渐进的力量训练和HIIT高强度间歇训练可以保持肌肉增 加基础代谢率, 使燃脂效率更佳.\n\n饮食上以杂粮、谷薯类等主食,组合搭配鱼虾、鸡蛋、瘦肉类低脂高蛋白食物,配合各种蔬菜水果,组成低热量、高营养, 强饱腹感的膳食结构。</string>
    <string name="fat_ratio_super_high">你的脂肪率超高, 可能会导致肥胖以及增加肥胖类疾病的患病风险.\n\n长时间的中低强度运动具有良好减脂效果, 搭配循序渐进的力量训练和HIIT高强度间歇训练可以保持肌肉增加基础代谢率, 使燃脂效率更佳。\n\n饮食上以杂粮、 谷薯类等主食, 组合搭配鱼虾、 鸡蛋、 瘦肉类低脂高蛋白食物,配合各种蔬菜水果, 组成低热量、高营养、 强饱腹感的膳食结构。</string>
    <string name="fat_mass_low">你的脂肪量偏低,肌肉线条较明显,身型凹凸有致.\n\n脂肪量即身体内所含脂肪的总重量.脂肪量包括皮下脂肪和内脏脂肪两种脂肪的重量。\n\n值得注意的是, 脂肪量过低可能会引起内分泌失调 , 建议保持在健康范围.</string>
    <string name="fat_mass_perfect">你的脂肪量处于理想范围,身型看起来不胖不痩.\n\n脂肪量即身体内所含脂肪的总重量.脂肪量包括皮下脂肪和内脏脂肪两种脂肪的重量.\n\n快步走、慢跑、自行车、游泳等长时间低强度的运动可以有效燃烧脂肪降低脂肪率,配合力量训练发展肌肉,助你拥有清晰肌肉线条.</string>
    <string name="fat_mass_high">你的脂肪量偏高,可能会导致肥胖以及增加肥胖类疾病的患病风险。\n\n长时间的中低强度运动具有良好减脂效果,搭配循序渐进的力量训练和HIIT高强度间歇训练可以保持肌肉增加基础代谢率,使燃脂效率更佳.\n\n饮食上以杂粮、 谷薯类等主食, 组合搭配鱼虾、 鸡蛋、 瘦肉类低脂高蛋白食物, 配合各种蔬菜水果, 组成低热量、 高营养、 强饱腹感的膳食结构。</string>
    <string name="fat_mass_super_high">你的脂肪量超高,可能会导致肥胖以及增加肥胖类疾病的患病风险.\n\n长时间的中低强度运劫具有良好减脂效果,搭配循序渐进的力量训练和HIIT高强度间歇训练可以保持肌肉增加基础代谢率,使燃脂效率更佳.\n\n饮食上以杂粮,谷薯类等主食,组合搭配鱼虾,鸡蛋、瘦肉类低脂高蛋白食物,配合各种蔬菜水果,组成低热量、 高营养、 强饱腹感的膳食结构</string>
    <string name="fat_free_super_low">你的去脂体重超低,需要控制饮食,加强锻炼,锻炼以减脂为主.\n\n去脂体重又称瘦体重, 即体内的非脂肪成分, 其中肌肉和骨骼占很大比重, 这是影响身体活动能力的重要因素</string>
    <string name="fat_free_low">你的去脂体重偏低,需要控制饮食、加强锻炼,锻炼以减脂为主.\n\n去脂体重又称痩体重, 即体内的非脂肪成分, 其中肌肉和骨略占很大比重, 这是影响身体活动能力的重要因素.</string>
    <string name="fat_free_perfect">你的去脂体重处于理想范围\n\n去脂体重又称瘦体重,即体内的非脂肪成分,其中肌肉和骨略占很大比重,这是影响身体活动能力的重要因素。</string>
    <string name="fat_free_high">你的去脂体重偏高,请继续保持良好的锻炼与饮食习惯。\n\n去脂体重又称瘦体重, 即体内的非脂肪成分, 其中肌肉和骨骼占很大比重, 这是影响身体活动能力的重要因素。</string>
    <string name="muscle_mass_low">你的肌肉量偏低, 会导致运动能力不足,还会引起基础代谢变慢。 节食和过快的降体重会引起肌肉的流失。\n\n增肌建议:每周进行2~3次的力量练习,可以刺激肌肉生长。 饮食上注意保证碳水和优质蛋白质的摄入, 促进糖原恢复和肌肉合成, 保证好睡眠时间和质量, 让肌肉有足够的时间完成修复。</string>
    <string name="muscle_mass_standard">你的肌肉量标准, 肌肉量可以反映一个人的力量水平, 肌肉量越高的人, 基础代谢越高, 越不容易发胖。\n\n增肌需满足三个条件:一是肌肉受到足够强度的刺激;二是有多余的热量, 尤其需要有足够的蛋白质用于肌肉合成; 三是要保证睡眠质量, 睡眠时生长激素分泌处于高峰, 有助于肌肉的修复与生长。</string>
    <string name="muscle_mass_perfect">你的肌肉量理想, 肌肉量可以反映一个人的力量水平, 肌肉量越高的人, 基础代谢越高, 越不容易发胖。\n\n增肌需满足三个条件: 一是肌肉受到足够强度的刺激; ニ是有多余的热量, 尤其需要有足够的蛋白质用于肌肉合成; 三是要保证睡眠质量, 睡 眠时生长激素分泌处于高峰, 有助于肌肉的修复与生长.</string>
    <string name="bone_muscle_low">你的骨骼肌偏低,可能会出现肌肉无力、日常生活能力下降、伤口愈合迟缓,以及免疫力降低导致的感染风险增加等.\n\n运动系统的肌肉属于横纹肌, 由于绝大部分依附着骨, 所以又称骨骼肌。 由于它连接着骨,在收缩与伸张时带动了骨的运动. 骨骼肌是机体运动能力的来源。\n\n为了增强骨骼肌, 应从膳食营养“和适量运动着手改善。 合理的膳食结构、 充足的优质蛋白摄入,配合每周2~3次的力量练习可以维持或增加肌肉数量,有效减缓肌肉丢失速度。</string>
    <string name="bone_muscle_standard">你的骨骼肌标准, 请继续保持良好的运动习惯.\n\n运动系统的肌肉属于横纹肌, 由于绝大部分依附着骨, 所以又称骨骼肌。 由于它连接着骨,在收缩与伸张时带动了骨的运动.骨骼肌是机体运动能力的来源。</string>
    <string name="bone_muscle_perfect">你的骨骼肌理想, 请继续保持良好的运动习惯.\n\n运动系统的肌肉属于横纹肌,由于绝大部分依附着骨,所以又称骨骼肌.由于它连接着骨,在收缩与伸张时带动了骨的运动. 骨骼肌是机体运动能力的来源。</string>
    <string name="bone_low">你的骨量偏低, 容易引发腰酸背疼的情况, 同时骨质疏松的风险也可能增加。\n\n骨量指的是钙、 磷等无机盐在体内的含量。 多晒太阳、 补充维生素D, 从牛奶、 豆制品、 鱼、 动物骨头中摄取钙质, 经常参加体育运动都可以让骨骼变的更强壮.</string>
    <string name="bone_perfect">你的骨量理想, 请继续保持均衡的饮食和适当的锻炼。\n\n骨量指的是钙、 磷等无机盐在体内的含量, 多晒太阳、补充维生素D, 从牛奶、 豆制品、 鱼、 动物骨头中摄取钙质, 经常参加体育运动都可以让骨骼变的更强壮。</string>
    <string name="body_age_young">很棒,你的身体年龄比真实年龄年轻.\n\n身体年龄是通过身体水分和基础代谢综合评估得出. 随着年龄的增长, 身体水分和基础代谢会逐渐下降。 积极锻炼、保持健康饮食和生活方式,可以使身体看起来更年轻。</string>
    <string name="body_age_old">身体年龄是通过身体水分和基础代谢综合评估得出.随着年岭的增长, 身体水分和基础代谢会逐渐下降, 积极锻炼、保持健康饮食和生活方式,可以使身体看起来更年轻.</string>
    <string name="gutLevel_perfect">你的内脏脂肪等级理想, 保持理想的内脏脂肪水平, 有助于降低脂肪肝、 高血压、 高血脂、 2型糖尿病等慢性疾病约患病风险.\n\n内脏脂肪等级反映内脏脂肪的堆积程度, 腹部脂肪过多与内脏脂肪等级高密切相关</string>
    <string name="gutLevel_high">你的内脏脂肪等级偏高, 可能会导致导致脂肪肝、 高血压、高血脂、2型糖尿病等慢性疾病的患病风险增加。\n\n内脏脂肪指数反映内脏脂肪的堆积程度, 腹部 脂肪过多与内脏脂肪等级高密切相关。\n\n建议你控制酒精、 甜食、 油炸等垃圾食品的摄入, 每周保持4~5次中低强度的有氧运动,降低全身脂肪含量, 改善代谢和胰岛素敏感性, 使内脏脂肪恢复到良好状态。</string>
    <string name="gutLevel_super_high">你的内脏脂肪等级超高, 可能会导致导致脂肪肝、 高血压、 高血脂、2型糖尿病等慢性疾病的患病风险增加。\n\n内脏脂肪指数反映内脏脂肪的堆积程度, 腹部脂肪过多与内脏脂肪等级高密切相关。\n\n建议你控制酒精、 甜食、 油炸等垃圾食品的摄入, 每周保持4~5次中低强度的有氧运动, 降低全身脂肪含量, 改善代谢和胰岛素敏感性, 使内脏 脂肪恢复到良好状态。</string>
    <string name="my_device">我的设备</string>
</resources>