<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingHorizontal="20dp"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/qq_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qq_login"/>
    <Button
        android:id="@+id/weibo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weibo_login"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/qq_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/weibo_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="20dp"/>


</LinearLayout>