<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Me.activity.ReminderDetailActivity">
        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <View style="@style/MeVerticalDividerStyle"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:text="@string/choose_time"/>
        </LinearLayout>

        <View style="@style/MeDividerStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <View style="@style/MeVerticalDividerStyle"/>
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:flexWrap="wrap"
                app:flexDirection="row"
                app:justifyContent="flex_start"
                app:alignItems="flex_start"/>
        </LinearLayout>

        <View style="@style/MeDividerStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <View style="@style/MeVerticalDividerStyle"/>
            <EditText
                android:id="@+id/remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/remark_hint"
                android:textSize="15sp"
                android:background="@null"/>
        </LinearLayout>

        <View style="@style/MeDividerStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/recycler"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <View style="@style/MeVerticalDividerStyle"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />
        </LinearLayout>

        <View style="@style/MeDividerStyle"/>

    </LinearLayout>
</ScrollView>