<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_device"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />
    <LinearLayout
        android:id="@+id/device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/ic_device_weight_scale"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_name"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <TextView
        android:id="@+id/pair_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorOrange"
        android:textSize="16sp"
        android:text="@string/pair_ls"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@drawable/bg_pair_device" />
</LinearLayout>