<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Community.activity.SearchActivity">
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <android.support.v7.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_hint"/>
        <ImageView
            android:id="@+id/recorder"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/recorder" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/search_result"
       android:layout_below="@id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/search"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/hot_key"
                android:textSize="16dp" />

            <android.support.design.internal.FlowLayout
                android:id="@+id/flow_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingHorizontal="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/search_history"
                android:textSize="16dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:overScrollMode="never"/>

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>